# lang-plugin-go

./: .gitignore  CMakeLists.txt  SConscript_go  build_plugin_installer_helper.py  uninstall_plugin.py
api/: CMakeLists.txt  CTestTestfile.cmake  MetaFFIAPI_python3_test.go  MetaFFIModule.go  MetaFFIRuntime.go  SConscript_api-go  cmake_install.cmake  go.mod
api/tests/: run_api_tests.py
api/tests/extended/jvm/log4j/: Log4j.go  go.mod
api/tests/extended/openjdk/log4j/: Log4j.go  go.mod
api/tests/extended/python3/beautifulsoup/: BeautifulSoupTest.go  go.mod
api/tests/extended/python3/complex-primitives/: ComplexPrimitivesTest.go  go.mod
api/tests/openjdk/: MetaFFIAPI_openjdk_test.go
api/tests/python3/: MetaFFIAPI_python3_test.go
api/tests/sanity/jvm/: MetaFFIAPI_jvm.go  go.mod
api/tests/sanity/openjdk/: MetaFFIAPI_openjdk.go  compile_java.py  go.mod
api/tests/sanity/python3/: MetaFFIAPI_python3.go  MetaFFIAPI_python3_test.go  go.mod  test_target.py
compiler/: CMakeLists.txt  Compiler.go  CompilerGuest_test.go  CompilerGuest_testHelper.go  CompilerHost_test.go  Compiler_test.go  GoCompiler_test.go  GuestCompiler.go  GuestTemplate.go  HostCompiler.go  HostTemplate.go  MetaFFIGoHostCommon.gotpl  PluginMain.go  README.md  SConscript_compiler-go  TemplateFunctions.go  compiler_api.cpp  go.mod  go_compiler_plugin.cpp  go_compiler_plugin.h
compiler/temp/: CompilerTestCode_test.go  GuestCode.go  go.mod  test_OpenFFIHost.go
compiler/test/: CMakeLists.txt  test_host_compiler_e2e_test.go
compiler/test/static/: e2e_entity_test.go
go-loader/: CMakeLists.txt  go.mod  main.go
go-runtime/: CDT.go  CGoAccessorForTest.go  CMakeLists.txt  LoadGoPluginLibrary.go  MetaFFBoolArray.go  MetaFFChar16Array.go  MetaFFChar32Array.go  MetaFFChar8Array.go  MetaFFIFloat32Array.go  MetaFFIFloat64Array.go  MetaFFIGoHostCommon.go  MetaFFIGoHostCommon_linux.go  MetaFFIGoHostCommon_test.go  MetaFFIGoHostCommon_windows.go  MetaFFIHandleArray.go  MetaFFIInt16Array.go  MetaFFIInt32Array.go  MetaFFIInt64Array.go  MetaFFIInt8Array.go  MetaFFIString16Array.go  MetaFFIString32Array.go  MetaFFIString8Array.go  MetaFFIUint16Array.go  MetaFFIUint32Array.go  MetaFFIUint64Array.go  MetaFFIUint8Array.go  ObjectsTable.go  ObjectsTable_test.go  ReleaserGetter.go  SConscript_go-runtime  TraverseConstruct.go  TraverseConstructCallbacks.go  XLLRAccessor.go  go.mod  main.go  traverse_construct_go_callbacks.h
go-runtime/test/: CGoAccessorForTest.go  MetaFFIGoHostCommonTest.go  run_test.py
idl/: CMakeLists.txt  ClassesExtractor.go  DefinedTypes.go  Extractors.go  FunctionsExtractor.go  GlobalsExtractor.go  GoIDLCompiler.go  GoIDLCompiler_test.go  PluginMain.go  SConscript_idl-go  go.mod  go_idl_plugin.cpp
idl/IDLCompiler/: ClassesExtractor.go  DefinedTypes.go  Extractors.go  FunctionsExtractor.go  GlobalsExtractor.go  GoIDLCompiler.go  GoIDLCompiler_test.go
install/: plugin_hooks.py  plugin_manifest.json
runtime/: CMakeLists.txt  SConscript_conandeps  SConscript_xllr-go  conanfile.txt  functions_repository.cpp  functions_repository.h  go_api.cpp  go_api_test.cpp  objects_table.cpp  objects_table.h  runtime_id.h
runtime/test/: TestRuntime.go  TestRuntime.metaffi.idl.json  TestRuntime_metaffi_guest.go.failed  build_guest.py  go.mod
test/: CMakeLists.txt  go_test_env.cpp  go_test_env.h  go_wrappers.cpp  go_wrappers.h  test_arrays.cpp  test_callbacks.cpp  test_classes.cpp  test_collections.cpp  test_core.cpp  test_enum_sub.cpp  test_errors.cpp  test_generics_varargs.cpp  test_module_state.cpp  test_primitives.cpp  test_third_party.cpp
